updated versions of dbs and more queries in the query notebooks

--- a/results_analysis.ipynb
+++ b/results_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,18 +30,18 @@
     "    \"original_df\": pandas.read_csv(\"../netdissect_results/result/no_mod_pytorch_resnet18_places365/tally.csv\"),\n",
     "    \"brightening_100\": pandas.read_csv(\"../netdissect_results/result/brightening_100_pytorch_resnet18_places365/tally.csv\"),\n",
     "    \"brightening_50\": pandas.read_csv(\"../netdissect_results/result/brightening_50_pytorch_resnet18_places365/tally.csv\"),\n",
+    "    \"brightening_attack_100\": pandas.read_csv(\"../netdissect_results/result/brightening_attack_100_pytorch_resnet18_places365/tally.csv\"),\n",
     "    \"brightening_attack_100_dilate_10\": pandas.read_csv(\"../netdissect_results/result/brightening_attack_100_dilate10_pytorch_resnet18_places365/tally.csv\"),\n",
     "    \"gaussian_50\": pandas.read_csv(\"../netdissect_results/result/gaussian_50_pytorch_resnet18_places365/tally.csv\"),\n",
     "    \"gaussian_100\": pandas.read_csv(\"../netdissect_results/result/gaussian_100_pytorch_resnet18_places365/tally.csv\"),\n",
     "    \"gaussian_attack_100_dilation_10\": pandas.read_csv(\"../netdissect_results/result/gaussian_attack_100_dilation_10_pytorch_resnet18_places365/tally.csv\"),\n",
-    "    \"gaussian_attack_100\": pandas.read_csv(\"../netdissect_results/result/gaussian_attack_100_pytorch_resnet18_places365/tally.csv\"),\n",
     "    \"gaussian_attack_100\": pandas.read_csv(\"../netdissect_results/result/gaussian_attack_100_pytorch_resnet18_places365/tally.csv\"),\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
