lots of backing data

--- a/complete_data_viewer.ipynb
+++ b/complete_data_viewer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,6 +403,51 @@
     "                      \"group by b.dataset_name \"+\n",
     "                      \";\", conn)\n",
     "# .to_csv('changed_unit_category_by_dataset_by_category.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "pandas.read_sql_query(\"select b.dataset_name, a.category, count(*) \"+\n",
+    "                      \"from complete_table a, complete_table b \"+\n",
+    "                      \"where a.unit=b.unit and a.label!=b.label and a.category=b.category and a.dataset_name='original_df' \"\n",
+    "                      \"group by b.dataset_name, a.category \"+\n",
+    "                      \";\", conn).to_csv('change_unit_label_not_category_by_dataset_by_category.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pandas.read_sql_query(\"with idea as (select dataset_name, category, label, count(*) as cnt, max(score) mx, avg(score) ag \"+\n",
+    "                      \"from complete_table a \"+\n",
+    "                      \"group by dataset_name, category, label \"+\n",
+    "                      \") \"+\n",
+    "                      \"select dataset_name, category, avg(mx), avg(ag) \"+\n",
+    "                      \"from idea \"+\n",
+    "                      \"group by dataset_name, category \"+\n",
+    "                      \";\", conn).to_csv('avg_of_maxandavg_by_label_by_category_by_dataset.csv')\n",
+    "#                       a, idea b \"+ \n",
+    "#                       \"where b.dataset_name='original_df'\";\", conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pandas.read_sql_query(\"select dataset_name, category, label, count(*) as cnt, max(score) mx, avg(score) ag \"+\n",
+    "                      \"from complete_table a \"+\n",
+    "                      \"group by dataset_name, category, label \"+\n",
+    "                      \";\", conn).to_csv('per_label_iou_stats.csv')"
    ]
   },
   {
