--- a/results_analysis.ipynb
+++ b/results_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = sqlite3.connect(\"datasets_as_tables.db\")\n",
+    "conn = sqlite3.connect(\"complete_data.db\")\n",
     "cur = conn.cursor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,21 +36,24 @@
     "    \"gaussian_100\": pandas.read_csv(\"../netdissect_results/result/gaussian_100_pytorch_resnet18_places365/tally.csv\"),\n",
     "    \"gaussian_attack_100_dilation_10\": pandas.read_csv(\"../netdissect_results/result/gaussian_attack_100_dilation_10_pytorch_resnet18_places365/tally.csv\"),\n",
     "    \"gaussian_attack_100\": pandas.read_csv(\"../netdissect_results/result/gaussian_attack_100_pytorch_resnet18_places365/tally.csv\"),\n",
+    "    \"jpeg_10\": pandas.read_csv(\"../netdissect_results/result/jpeg10_pytorch_resnet18_places365/tally.csv\"),\n",
+    "    \"jpeg_25\": pandas.read_csv(\"../netdissect_results/result/jpeg25_pytorch_resnet18_places365/tally.csv\"),\n",
+    "    \"jpeg_50\": pandas.read_csv(\"../netdissect_results/result/jpeg50_pytorch_resnet18_places365/tally.csv\")\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "# original_df.to_sql('no_mod', conn, if_exists='replace', index=False)\n",
     "# new_df.to_sql('brightening_100_pytorch_resnet18_places365', conn, if_exists='replace', index=False)\n",
     "for name in dfs:\n",
-    "#     dfs[name]['dataset_name'] = name\n",
-    "#     dfs[name].to_sql('complete_table', conn, if_exists='append', index=False)\n",
-    "    dfs[name].to_sql(name, conn, if_exists='replace', index=False)\n",
+    "    dfs[name]['dataset_name'] = name\n",
+    "    dfs[name].to_sql('complete_table', conn, if_exists='append', index=False)\n",
+    "#     dfs[name].to_sql(name, conn, if_exists='replace', index=False)\n",
     "#     print(dfs[name].head())"
    ]
   },
